style.css
/* ... */
.div-input-btn__mymix {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: row;
    position: relative;
}

.btn-input-mymix {
    position: absolute;
    right: 2px;
    display: flex;
    border: none;
    background: none;
    cursor: pointer;
    background: black;
    color: white;
    border-radius: 9px;
    padding: 5px;
}

.btn-input-mymix:hover {
    opacity: 0.8;
}

.div-sections{
    width: 90%;
    padding: 20px 0;
    margin: 0 auto;
    display: flex;
    flex-direction: column;
    gap: 15px;
}

.section__mix {
    display: flex;
    flex-direction: column;
    margin: 0 auto;
    width: 90%;
    max-width: 795px;
    border-bottom: 1px solid #838383;
    padding-bottom: 15px;
    gap: 10px;
}

.div-btns-mix-timer{
    display: flex;
    gap: 10px;
    align-items: center;
    justify-content: center;
    flex-flow: row wrap;
}

.btntop {
    padding: 10px 15px;
    font-size: 16px;
    border-radius: 50px;
    border: none;
    background: #3d3f42;
    color: white;
    cursor: pointer;
}

.btntop:hover {
    opacity: 0.8;
}

.div__mixs {
    display: none;
    flex-direction: row;
    align-items: flex-end;
    justify-content: center;
    background: #282a2c;
    border-radius: 20px;
    padding: 15px;
}

.clicked-mix-timer {
    color: #282a2c;
    background: white;
}
.group__default-mix {
    width: max-content;
    display: flex;
    gap: 5px;
    flex-flow: column wrap;
    padding: 5px;
}

.group__my-mix {
    width: max-content;
    display: flex;
    flex-flow: column wrap;
    gap: 5px;
    padding: 5px;
}

.group-btn__mix {
    border-radius: 10px;
    display: flex;
    gap: 10px;
    flex-flow: row wrap;
    justify-content: center;
    align-items: flex-start;
}

.group__my-mix-p-btn {
    display: flex;
    gap: 5px;
    align-items: center;
    flex-flow: row nowrap;
}


.btn-mix {
    border-radius: 50px;
    border: none;
    background: #3D3F42;
    color: white;
    font-size: 16px;
    padding: 10px 20px;
    flex-grow: 1;
    cursor: pointer;
    transition: 0.3s ease-out;
}

.btn-mix:hover {
    opacity: 0.7;
}

.btn__my-mix {
    box-shadow: inset 0 0 0 2px white;
}

.btn__my-mix-clicked {
    background: white;
    color: black;
    background-image: url(assets/bg-mymix.png);
    background-position: bottom;
}

.p__my-mix {
    display: flex;
    gap: 5px;
    justify-content: flex-start;
    align-items: center;
}

.btn-delete-mix {
    background: none;
    border: none;
    color: white;
    cursor: pointer;
    transition: background-color 0.3s;
}

.btn-delete-mix:hover {
    color: crimson;
}

.btn-delete-mix span {
    font-size: 20px;
}

.material-symbols-outlined.btn-delete-mix {
    font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'opsz' 24;
}

.beach-campfire-btn-clicked{
    background: linear-gradient(45deg, #ffeb3bd1, #e91e63d4), url(assets/beachcampfire-bg-btn.png);
    color: #ffffff;
    background-size: cover;
    background-position: bottom;
    background-blend-mode: hard-light;
    box-shadow: 0 0 20px 0px #ff7b004d;
}

.calm-storm-btn-clicked{
    background: linear-gradient(45deg, #9C27B0, #2196F3), url(assets/calmstorm-bg-btn4.jpg);
    color: #ffffff;
    background-size: cover;
    background-position: center;
    background-blend-mode: screen;
    box-shadow: 0 0 20px 0px #7700ff4d;
}

.seaside-city-btn-clicked{
    background: linear-gradient(180deg, #00b8ff, #0756ff), url(assets/test-bg-seasidecity3.png);
    background-size: cover;
    background-position: center;
    background-blend-mode: hard-light;
    box-shadow: 0 0 20px 0px #0069ff63;
}
.section__ambiance {
    margin: 0 auto;
}

.container__ambiance {
    display: grid;
    gap: 25px;
    grid-template-columns: repeat(4, 180px);
    grid-template-rows: repeat(3, 180px);
    justify-items: start;
    justify-content: center;
    min-height: max-content;
    transition: 0.2s ease-out;

    position: relative;
}

.clicked-mymix-container1 {
    padding: 50px;
    border: 2px solid #838383;
    border-radius: 15px;
    position: relative;
    margin-top: 30px;
}

.div-mode-timer {
    background: #282a2c;
    width: 100%;
    height: max-content;
    margin: 0 auto;
    display: none;
    flex-direction: column;
    justify-content: space-between;
    color: white;
    border-radius: 20px;
}

.div-btns-pomo-timer {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 10px;
    padding: 15px;
}

.btns-timer {
    padding: 10px 20px;
    font-size: 16px;
    border: none;
    border-radius: 50px;
    cursor: pointer;
    background: #3D3F42;
    color: white;
}

.btns-timer:hover {
    opacity: 0.8;
}
.div-pomodoro-screen {
    display: flex;
    flex-flow: row nowrap;
    padding: 20px;
}

.div-label-input{
    display: flex;
    flex-flow: column-reverse wrap;
    align-items: center;
    justify-content: center;
    width: 50%;
}

.div-inputs-pomodoro {
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    justify-content: center;
    width: 150px;
}

.input-timer {
    border: none;
    background: none;
    font-size: clamp(40px, 3.5vw, 50px);
    width: 100%;
    outline: none;
    text-align: center;
    color: white;
}


.p-pomodoro {
    font-size: clamp(40px, 3.5vw, 50px);
}

.div-simpletimer-screen {
    display: none;
    flex-flow: row nowrap;
    padding: 20px;
}

.div-input-simple-timer {
    display: flex;
    flex-flow: row nowrap;
    align-items: center;
    justify-content: center;
    width: 230px;
    margin: 0 auto;
}

.input-timer-hours {
    border: none;
    background: none;
    font-size: clamp(40px, 3.5vw, 50px);
    width: 100%;
    outline: none;
    text-align: center;
    color: white;
}

.clicked-timer {
    background: white;
    color: #46494b;
}

.div-btn-bottom {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 15px;
    padding: 15px 0;
}
/* ... */

